# B-lab-holdem-bots

./: README.md
homin/: .env.example  .gitignore  README.md  pyproject.toml
homin/configs/: blind_schedule.yaml  bluff_labels.yaml  class_priors.bootstrap_backup.yaml  class_priors.yaml  conservatism_schedule.yaml  llm.yaml  position_class_map.yaml  priors.yaml  sizing.yaml  transfer_coefficients.yaml
homin/configs/nash_charts/: heads_up.yaml  simple_push_9max.yaml
homin/data/: ab_priors_results.json  bluff_threshold_report.json  bootstrap_results.json  class_typing_report.json  convergence_report.json  dataset_report.json  player_stats.csv  population_prior_report.json  sizing_report.json  tournament_multi_results.json  tournament_results.json
homin/docs/: architecture.md
homin/research/: LICENSE_NOTE.md  README.md  _template.md  blind_schedule_analysis.md  bot_guide_extracts.md  deploy_api_notes.md  theory_notes.md  week2_plan.md
homin/scripts/: ab_priors.py  analyze_session.py  bench_concurrency.py  bluff_threshold.py  bootstrap_sim.py  bot-check.sh  bot-dashboard.sh  bot-logs.sh  bot-play.sh  bot-start.sh  bot-status.sh  bot-stop.sh  calc_population_prior.py  class_typing_eda.py  configs_dryload.py  convergence_speed.py  dataset_inspect.py  leaderboard_check.py  sizing_distribution.py  tournament_sim.py  update_class_priors_from_bootstrap.py  validate_nash_charts.py
homin/src/holdem/: _env.py  (+1 more)
homin/tests/: test_ab_priors.py  test_analyze_session.py  test_bayes.py  test_board_texture.py  test_bot_strategy.py  test_budget.py  test_cbet.py  test_class_typer.py  test_conservatism.py  test_e2e_smoke.py  test_engine_multi.py  test_equity.py  test_ev.py  test_game_state.py  test_hand_notation.py  test_hu_chart.py  test_icm.py  test_info_gain.py  test_leaderboard_client.py  test_llm_client.py  test_llm_coordinator.py  test_llm_snapshot.py  test_m_ratio.py  test_meta_loose.py  test_mode_selector.py  test_multi_room_concurrent.py  test_nash_chart_integrity.py  test_odds.py  test_opening_chart.py  test_opponent_lookup.py  test_persist_db.py  test_persist_response.py  test_player_profile.py  test_policy.py  test_policy_adapter.py  test_policy_async.py  test_policy_conservatism.py  test_policy_ev_tree.py  test_policy_multiway.py  test_profile_store.py  (+14 more)
junho/tools/: pyproject.toml
mineru/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
mineru/docs/: ARCHITECTURE.md  BOT_REFERENCE.md  REVIEW_REPORT.md  STRATEGY_GUIDE.md  prompt-02.txt  prompt-03.txt  prompt-04.txt  prompt-05.txt  prompt.txt
mineru/tests/: conftest.py  test_benchmark.py  test_cli.py
(+248 files in other folders)
