[project]
name = "holdem-agent"
version = "0.1.0"
description = "Texas Hold'em Tournament Bot with Bayesian opponent modeling and LLM meta-coordinator"
requires-python = ">=3.11"
dependencies = [
    # Transport & Protocol
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    # Math & Data
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    # Poker-specific
    "treys>=0.1.8",
    # Visualization (EDA)
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Clustering (class typing)
    "scikit-learn>=1.3",
]

[project.scripts]
holdem = "holdem.cli:main"
holdem-dashboard = "holdem.dashboard.server:main"

[project.optional-dependencies]
llm = [
    # OpenAI-호환 프록시 엔드포인트 (http://localhost:8317/v1) 를 통해 Claude 호출.
    # base_url + api_key 오버라이드만으로 Claude (haiku/sonnet/opus) 사용 가능.
    "openai>=1.50",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.2",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holdem"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "kaggle>=2.0.1",
]
