[project]
name = "holdem-agent"
version = "0.1.0"
description = "Texas Hold'em AI with strategy evolution ecosystem"
requires-python = ">=3.14"
dependencies = [
    "websockets>=14.0",
    "treys>=0.1.8",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
holdem-agent = "holdem_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/holdem_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
